--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:8080/",
   "dependencies": {
     "axios": "^0.18.0",
+    "google-map-react": "^1.0.9",
     "react": "^16.6.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
