--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "example-create-react-app-express",
   "version": "1.0.0",
   "scripts": {
-    "build-client": "cd client && npm run build",
+    "build-client": "cd client && npm i && npm run build",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "start": "nodemon server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "nodemon": "^1.18.7"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
